--- a/package.json
+++ b/package.json
@@ -11,5 +11,16 @@
   "scripts": {
     "test": "echo \"Error no test specified\" && exit 1",
     "start": "node express.js"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Mettle101/pepboard.github.io.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Mettle101/pepboard.github.io/issues"
+  },
+  "homepage": "https://github.com/Mettle101/pepboard.github.io#readme"
 }
